# MagnetarVoIP

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  MagnetarVoIP.sln  MagnetarVoIP.vcxproj  MagnetarVoIP.vcxproj.filters  Makefile  PulsarVoIP.sln  PulsarVoIP.vcxproj  PulsarVoIP.vcxproj.filters  README.md  cli_history.txt  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-dfa87cc146135ea3de51.json  cmakeFiles-v1-ca37bcafe7c2d05502f8.json  codemodel-v2-b827677dffbe4c96e5cd.json  index-2023-06-06T13-09-19-0827.json  target-MagnetarVoIP-0.0.1.out-Debug-da44c3984cd9dcec37f8.json
include/lib/re/: re_sa.h
include/magnetarvoip/: aio.h  cht.h  cht_main.h  cli.h  cli_init.h  cmd.h  core.h  core_thread.h  include_all.h  init.h  init_audiograph.h  init_cli.h  init_cppserver.h  init_cppserver.hpp  init_miniaudio.h  init_network.h  init_network.hpp  init_ux.h  macros.h  magnetar.h  nw.h  nw.hpp  nw_client.h  nw_client.hpp  nw_interface.h  nw_server.h  nw_server.hpp  queue.h  queue_.h  settings.h  ux.h
include/miniaudio/: miniaudio.h
lib/: opus.exp  opus.lib
lib/windows/: asio.lib  cpp-optparse.lib  cppbenchmark.lib  opus.lib  proto.lib  re-static.lib
src/audio/: aio_capture.c  aio_configure.c  aio_playback.c
src/chat/: cht_main.cc  cht_packing.c  cht_packing.cc  cht_unpacking.cc
src/core/: core.c  core_thread.c  core_thread.cc
src/etc/: queue.cc  queue_.cc
src/init/: init.cc  init_audiograph.cc  init_cli.c  init_cppserver.cc  init_externs.cc  init_miniaudio.c  init_network.cc  init_opus.c  init_opus.cc  init_soundio.cc  init_tui.c  init_ux.c  init_wasapi.cc
src/libs/linenoise/: ConvertUTF.cpp  linenoise.cpp
src/libs/miniaudio/: miniaudio.c
src/networking/: nw_client.c  nw_client.cc  nw_configure.cc  nw_interface.cc  nw_interface.h  nw_packer.cc  nw_recv_rtp.c  nw_rertcp.c  nw_rescp.c  nw_rtp.c  nw_send_rtp.c  nw_send_rtp_.c  nw_server.c  nw_server.cc  nw_tcp.c
src/networking/audio/: aio_configure.c  aio_configure.cc  aio_micio.c  aio_micio.cc  aio_opus.c  aio_opus.cc
src/networking/chat/: cht_packing.cc  cht_unpacking.c  cht_unpacking.cc
src/ux/: ux_interface.c  ux_main.c
src/ux/cli/: cli_init.cc  cli_interface.c  cli_interface.cc  cli_interpret.c  cli_interpret.cc  cli_interpret_.c  cli_layout.c  init_cli.cc
src/ux/tui/: init_tui.cc  tui_init.cc  tui_interface.c  tui_interface.cc  tui_interpret.c  tui_interpret.cc  tui_update.c  tui_update.cc
x64/Debug/: MagnetarVoIP.exe.recipe  MagnetarVoIP.ilk  MagnetarVoIP.vcxproj.FileListAbsolute.txt  PulsarVoIP.exe.recipe  PulsarVoIP.ilk  PulsarVoIP.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/MagnetarVoIP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MagnetarVoIP.lastbuildstate  MagnetarVoIP.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/PulsarVoIP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PulsarVoIP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
